# ramulator2

./: CMakeLists.txt  README.md  conanfile.py
include/ramulator/base/: base.h  clocked.h  debug.h  factory.h  logging.h  param.h  request.h  stats.h
include/ramulator/frontend/: frontend.h
include/ramulator/memory_system/: memory_system.h
src/: main.cpp
src/addr_mapper/: CMakeLists.txt  addr_mapper.h
src/addr_mapper/impl/: linear_mappers.cpp  rit.h
src/base/: CMakeLists.txt  config.cpp  factory.cpp  logging.cpp  request.cpp  stats.cpp  utils.cpp
src/dram/: CMakeLists.txt  dram.h  node.h
src/dram_controller/: CMakeLists.txt  bh_controller.h  bh_scheduler.h  controller.h  plugin.h  refresh.h  scheduler.h
src/dram_controller/impl/: bh_dram_controller.cpp  generic_dram_controller.cpp
src/dram_controller/impl/plugin/: graphene.cpp  (+7 more)
src/example/: CMakeLists.txt  example_ifce.h
src/example/impl/: example_impl.cpp  example_serialization.cpp
src/frontend/: CMakeLists.txt
src/frontend/impl/external_wrapper/: gem5_frontend.cpp
src/frontend/impl/memory_trace/: loadstore_trace.cpp  readwrite_trace.cpp
src/frontend/impl/processor/bhO3/: bhO3.h  bhcore.cpp  bhcore.h  bhllc.h
src/frontend/impl/processor/simpleO3/: core.cpp  core.h  llc.h  simpleO3.cpp  trace.cpp  trace.h
src/memory_system/: CMakeLists.txt  bh_memory_system.h
src/memory_system/impl/: dummy_memory_system.cpp  generic_DRAM_system.cpp
src/test/: CMakeLists.txt  test_ifce.h
src/translation/: CMakeLists.txt  translation.h
src/translation/impl/: no_translation.cpp  random_translation.cpp
(+6 files in other folders)
